Prevent official overflow

--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -107,12 +107,14 @@ h5 {
   font-size: 1em;
   color: #444;
   text-transform: uppercase;
+  word-break: break-all;
 }
 
 .position-text {
   font-family: opensans;
   font-size: 1em;
   color: #333;
+  word-break: break-all;
 }
 
 /* Officials page text overflow fix */
